docs: add api and routes dir and prefix docs

--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -392,6 +392,18 @@ This option is useful when your hosting provider does not give you an option reg
 
 The prerenderer will attempt to render pages 3 times with a delay of 500ms. Use `retry` and `retryDelay` to change this behavior.
 
+### `apiPrefix`
+
+- Default : `/api`
+
+Changes the api URL prefix
+
+### `routesPrefix`
+
+- Default : `/`
+
+Changes the routes URL prefix
+
 ## Directories
 
 ### `rootDir`
@@ -407,6 +419,18 @@ Project source directory. Same as `rootDir` unless specified. Helpful to move co
 - Default: (source directory when empty array)
 
 List of directories to scan and auto-register files, such as API routes.
+
+### `apiDir`
+
+- Default : `api`
+
+Defines a different directory for api handlers
+
+### `routesDir`
+
+- Default : `routes`
+
+Defines a different directory for routes handlers
 
 ### `buildDir`
 
