--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -182,7 +182,7 @@ export default defineEventHandler((event) => {
 ```
 
 ::alert
-Returning anything from a middleware will close the request and should be avoided! Any returned value from middleware will be the response and further code will not be executed.
+Returning anything from a middleware will close the request and should be avoided! Any returned value from middleware will be the response and further code will not be executed however **this is not recommended to do!**
 ::
 
 ### Execution Order
