--- a/docs/content/3.config.md
+++ b/docs/content/3.config.md
@@ -300,7 +300,7 @@ export default defineNitroConfig({
 ```
 
 ```js [error.ts]
-export default defineNitroErrorHandler(function (error, event) {
+export default defineNitroErrorHandler((error, event) => {
   setResponseHeader('Content-Type', 'text/plain')
   return send(event, '[custom error handler] ' + error.stack)
 });
