feat: add `defineNitroErrorHandler` type helper (#1923)

--- a/docs/content/3.config.md
+++ b/docs/content/3.config.md
@@ -287,6 +287,9 @@ See [unjs/httpxy](https://github.com/unjs/httpxy) for all available target optio
 ### `errorHandler`
 
 Path to a custom runtime error handler. Replacing nitro's built-in error page.
+The error handler is given an `H3Error` and `H3Event`. If the handler returns a promise it is awaited.
+The handler is expected to send a response of its own.
+Below is an example where a plain-text response is returned using h3's functions.
 
 **Example:**
 
@@ -297,11 +300,10 @@ export default defineNitroConfig({
 ```
 
 ```js [error.ts]
-import type { NitroErrorHandler } from 'nitropack'
-
-export default <NitroErrorHandler> function (error, event) {
-  event.res.end('[custom error handler] ' + error.stack)
-}
+export default defineNitroErrorHandler((error, event) => {
+  setResponseHeader('Content-Type', 'text/plain')
+  return send(event, '[custom error handler] ' + error.stack)
+});
 ```
 
 ### `routeRules`
