--- a/docs/content/2.deploy/0.index.md
+++ b/docs/content/2.deploy/0.index.md
@@ -25,7 +25,7 @@ When deploying to the production using CI/CD, Nitro tries to automatically detec
 - [netlify](/deploy/providers/netlify)
 - [stormkit](/deploy/providers/stormkit)
 - [vercel](/deploy/providers/vercel)
-
+- [zeabur](/deploy/providers/zeabur)
 
 ## Changing the deployment preset
 
