--- a/docs/content/0.guide/0.getting-started.md
+++ b/docs/content/0.guide/0.getting-started.md
@@ -1,10 +1,7 @@
 ---
 icon: i-ph-rocket-launch-duotone
+description: "Let's create a new Nitro app in few steps."
 ---
-
-# Getting Started
-
-Let's create a new Nitro app in few steps.
 
 ## Play Online
 
