--- a/docs/content/0.guide/1.configuration.md
+++ b/docs/content/0.guide/1.configuration.md
@@ -1,8 +1,7 @@
 ---
 icon: i-ph-gear-duotone
+description: ''
 ---
-
-# Configuration
 
 You can customize your Nitro server with single configuration file: `nitro.config.ts`.
 
@@ -110,11 +109,13 @@ The variables prefixed with `NITRO_` will be applied to runtime config, and they
 **Example:**
 
 ::code-group
-```bash [.env (nitro)]
+```bash [.env]
+Nitro
 NITRO_HELLO_THERE="123"
 ```
 
-```bash [.env (nuxt)]
+```bash [.env]
+Nuxt
 NUXT_HELLO_THERE="123"
 ```
 ::
