--- a/docs/content/0.guide/2.auto-imports.md
+++ b/docs/content/0.guide/2.auto-imports.md
@@ -1,8 +1,7 @@
 ---
 icon: i-ph-magic-wand-duotone
+description: ''
 ---
-
-# Auto Imports
 
 Nitro is using [unjs/unimport](https://github.com/unjs/unimport) to auto import utilities when used with full tree-shaking support.
 
