--- a/docs/content/0.guide/3.routing.md
+++ b/docs/content/0.guide/3.routing.md
@@ -1,11 +1,8 @@
 ---
 title: Routing
+description: "Nitro support filesystem routing as well as defining route rules for maximum flexibility and performance."
 icon: i-ph-arrow-elbow-up-right-duotone
 ---
-
-# Routing
-
-Nitro support filesystem routing as well as defining route rules for maximum flexibility and performance.
 
 ## Filesystem Routing
 
