--- a/docs/content/0.guide/4.storage.md
+++ b/docs/content/0.guide/4.storage.md
@@ -1,10 +1,8 @@
 ---
 icon: i-ph-database-duotone
+title: 'Storage Layer'
+description: "Nitro provides a built-in storage layer that can abstract filesystem or database or any other data source."
 ---
-
-# Storage Layer
-
-Nitro provides a built-in storage layer that can abstract filesystem or database or any other data source.
 
 `useStorage()` is an instance of [createStorage](https://unstorage.unjs.io/usage) using the [memory driver](https://unstorage.unjs.io/drivers/memory).
 
