--- a/docs/content/0.guide/5.cache.md
+++ b/docs/content/0.guide/5.cache.md
@@ -1,8 +1,8 @@
 ---
 icon: i-ph-fast-forward-duotone
+title: 'Cash API'
+description: ""
 ---
-
-# Cache API
 
 Nitro provides a powerful caching system built on top of the [storage layer](/guide/storage).
 
