--- a/docs/content/0.guide/6.assets.md
+++ b/docs/content/0.guide/6.assets.md
@@ -1,9 +1,10 @@
 ---
 icon: i-ph-images-square-duotone
-title: Assets
+title: 'Assets'
+description: ''
 ---
 
-# Assets Handling
+## Handling
 
 Nitro handles assets via the `public/` directory.
 
