--- a/docs/content/0.guide/6.utils.md
+++ b/docs/content/0.guide/6.utils.md
@@ -1,9 +1,8 @@
 ---
 title: Utils
+description: ''
 icon: i-ph-hammer-duotone
 ---
-
-# Utils
 
 Nitro helps you to stay organized allowing you to take advantage of the [`auto-imports`](auto-imports.md) feature.
 
