--- a/docs/content/0.guide/8.typescript.md
+++ b/docs/content/0.guide/8.typescript.md
@@ -1,11 +1,8 @@
 ---
 icon: i-simple-icons-typescript
 title: TypeScript
+description: 'Nitro supports TypeScript by default. If you are using the starter template, you have nothing to do ✨'
 ---
-
-# TypeScript Support
-
-Nitro supports TypeScript by default. If you are using the starter template, you have nothing to do :sparkles:.
 
 To add type hints within your project, create a `tsconfig.json` file:
 
