--- a/docs/content/0.guide/community/9.contributing.md
+++ b/docs/content/0.guide/community/9.contributing.md
@@ -1,6 +1,6 @@
-# Contributing
-
-Thank you for wanting to contribute to Nitro 💛
+---
+description: "Thank you for wanting to contribute to Nitro 💛"
+---
 
 Before everything, please make sure to check the [open issues](https://github.com/unjs/nitro/issues) or the [discussions](https://github.com/unjs/nitro/discussions).
 
