--- a/docs/content/0.guide/7.plugins.md
+++ b/docs/content/0.guide/7.plugins.md
@@ -1,10 +1,7 @@
 ---
 icon: i-ph-plug-duotone
+description: "Use plugins to extend Nitro's runtime behavior."
 ---
-
-#  Plugins
-
-Use plugins to extend Nitro's runtime behavior.
 
 Plugins are auto-registered (filename ordering) and run synchronously on the first nitro initialization. They receive `nitroApp` context, which can be used to hook into lifecycle events.
 
