--- a/docs/content/1.deploy/0.index.md
+++ b/docs/content/1.deploy/0.index.md
@@ -1,12 +1,8 @@
 ---
 icon: i-ph-file-cloud-duotone
+title: 'Deployment'
+description: "Nitro can generate different output formats suitable for different hosting providers from the same code base. Using built-in presets, you can easily configure Nitro to adjust it's output format with almost no additional code or configuration!"
 ---
-
-# Overview
-
-Nitro can generate different output formats suitable for different hosting providers from the same code base.
-
-Using built-in presets, you can easily configure Nitro to adjust it's output format with almost no additional code or configuration!
 
 ## Default output
 
