--- a/docs/content/1.deploy/1.workers.md
+++ b/docs/content/1.deploy/1.workers.md
@@ -1,10 +1,7 @@
 ---
 icon: i-ph-globe-duotone
+description: 'Nitro provides out of the box support for deploying to Edge Workers.'
 ---
-
-# Edge Workers
-
-Nitro provides out of the box support for deploying to Edge Workers.
 
 ## Deploy to Workers
 
