--- a/docs/content/2.config.md
+++ b/docs/content/2.config.md
@@ -1,11 +1,8 @@
 ---
 icon: i-ph-gear-six-duotone
+description: 'Customize your Nitro app with a configuration file.'
 aside: false
 ---
-
-# Configuration
-
-Customize your Nitro app with a configuration file.
 
 In order to customize Nitro's behavior, we create a file named `nitro.config.ts`.
 
