feat: support function/RegExp for `prerender.ignore` (#1966)

--- a/docs/content/3.config.md
+++ b/docs/content/3.config.md
@@ -357,7 +357,7 @@ Default:
 
 Prerendered options. Any route specified will be fetched during the build and copied to the `.output/public` directory as a static asset.
 
-Any route that starts with a prefix listed in `ignore` will be ignored.
+Any route (string) that starts with a prefix listed in `ignore` or matches a regular expression or function will be ignored.
 
 If `crawlLinks` option is set to `true`, nitro starts with `/` by default (or all routes in `routes` array) and for HTML pages extracts `<a>` tags and prerender them as well.
 
