feat: allow wildcard redirects

--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -167,6 +167,7 @@ export default defineNitroConfig({
     '/assets/**': { headers: { 'cache-control': 's-maxage=0' } },
     '/api/v1/**': { cors: true, headers: { 'access-control-allow-methods': 'GET' } },
     '/old-page': { redirect: '/new-page' },
+    '/old-page/**': { redirect: '/new-page/**' },
     '/proxy/example': { proxy: 'https://example.com' },
     '/proxy/**': { proxy: '/api/**' },
   }
@@ -182,6 +183,7 @@ export default defineNuxtConfig({
     '/assets/**': { headers: { 'cache-control': 's-maxage=0' } },
     '/api/v1/**': { cors: true, headers: { 'access-control-allow-methods': 'GET' } },
     '/old-page': { redirect: '/new-page' },
+    '/old-page/**': { redirect: '/new-page/**' },
     '/proxy/example': { proxy: 'https://example.com' },
     '/proxy/**': { proxy: '/api/**' },
   }
