docs: update request filtering to match the type of getRequestURL

--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -216,7 +216,7 @@ For example, you can use the URL to apply a middleware to a specific route:
 ```ts [middleware/auth.ts]
 export default defineEventHandler((event) => {
   // Will only execute for /auth route
-  if (getRequestURL(event).startsWith('/auth')) {
+  if (getRequestURL(event).pathname.startsWith('/auth')) {
     event.context.user = { name: 'Nitro' }
   }
 })
