docs: fix setResponseHeader params

--- a/docs/content/3.config.md
+++ b/docs/content/3.config.md
@@ -301,7 +301,7 @@ export default defineNitroConfig({
 
 ```js [error.ts]
 export default defineNitroErrorHandler((error, event) => {
-  setResponseHeader('Content-Type', 'text/plain')
+  setResponseHeader(event, 'Content-Type', 'text/plain')
   return send(event, '[custom error handler] ' + error.stack)
 });
 ```
