clarify how presets work

--- a/docs/content/2.deploy/0.index.md
+++ b/docs/content/2.deploy/0.index.md
@@ -17,7 +17,7 @@ When running Nitro in development mode, Nitro will always use a special preset c
 
 ## Zero-Config Providers
 
-When deploying to the production using CI/CD, Nitro tries to automatically detect the provider environment and set the right one without any additional configuration. Currently, providers below can be auto-detected with zero config.
+When deploying to production using CI/CD, Nitro tries to automatically detect the provider environment and set the right one without any additional configuration required. Currently, the providers below can be auto-detected with zero config.
 
 - [aws amplify](/deploy/providers/aws-amplify)
 - [azure](/deploy/providers/azure)
@@ -27,19 +27,25 @@ When deploying to the production using CI/CD, Nitro tries to automatically detec
 - [vercel](/deploy/providers/vercel)
 - [zeabur](/deploy/providers/zeabur)
 
+::alert{type="info"}
+**Note:** Even with these presets, if you need to build your application locally (for development or testing purposes) targeting the provider environment, you still need to tell Nitro what preset it needs to use (you can see below how).
+::
+
 ## Changing the deployment preset
 
-If you need to build Nitro against a specific provider, you can override it using an environment variable or `nitro.config.ts`. Using environment variable is recommended for deployments depending on CI/CD.
+If you need to build Nitro against a specific provider, you can target it by defining an environment variable named `NITRO_PRESET` or `SERVER_PRESET`, or by updating your Nitro [configuration](/guide/configuration).
 
-**Example:** Using `NITRO_PRESET`
+Using the environment variable approach is recommended for deployments depending on CI/CD.
+
+**Example:** Defining a `NITRO_PRESET` environment variable
 ```bash
 NITRO_PRESET=aws_lambda nitro build
 ```
 
-**Example:** Using [nitro.config.ts](/guide/configuration)
+**Example:** Updating the `nitro.config.ts` file
 
 ```ts
 export default defineNitroConfig({
-  preset: 'node-server'
+  preset: 'aws_lambda'
 })
 ```
