--- a/docs/content/1.guide/0.getting-started.md
+++ b/docs/content/1.guide/0.getting-started.md
@@ -4,9 +4,13 @@ icon: ri:rocket-2-line
 
 # Getting Started
 
-Let's create a new Nitro app in few steps.
+Under the hood, Nitro is using [h3](https://h3.unjs.io) as HTTP framework, embeds many utilities (file routing, storage, cache...) and preconfigured packages like [unimports](https://unimports.unjs.io) or [unstorage](https://unstorage.unjs.io) and provide a set of presets to deploy your server anywhere.
+
+Now you know what Nitro is, let's get started and create your first Nitro app!
 
 ## Play Online
+
+The easiest way to get started with Nitro is to use the online playground.
 
 :button-link[Open on Stackblitz]{href="https://stackblitz.com/github/unjs/nitro/tree/main/examples/hello-world" icon="simple-icons:stackblitz" blank style="margin-right: 10px;margin-bottom:10px;"}
 :button-link[Open on CodeSandbox]{href="https://codesandbox.io/p/sandbox/nitro-template-5jssbm" icon="simple-icons:codesandbox" blank}
@@ -17,8 +21,8 @@ Let's create a new Nitro app in few steps.
 #summary
 Make sure you have installed the recommended setup:
 #content
-* **Node.js**<sup>*</sup> (latest LTS version) 👉 [[Download](https://nodejs.org/en/download/)]
-* **Visual Studio Code**  [[Download](https://code.visualstudio.com/)]
+* **Node.js**<sup>*</sup> (latest LTS version) 👉 [Download](https://nodejs.org/en/download/)
+* **Visual Studio Code**  [Download](https://code.visualstudio.com/)
 * [corepack](https://nodejs.org/api/corepack.html) for using pnpm and yarn. 👉 Run `corepack enable`
 ::
 
@@ -73,7 +77,7 @@ Start the development server:
 npm run dev
 ```
 
-🪄 Your API is ready at `http://localhost:3000/`
+Nitro is ready at `http://localhost:3000/`!
 
 ::alert
 Check `.nitro/dev/index.mjs` if want to know what is happening
@@ -83,7 +87,7 @@ Build your production-ready server:
 
 ```bash
 npm run build
-````
+```
 
 Output is in the `.output` directory and ready to be deployed on almost any provider with no dependencies.
 
@@ -93,6 +97,71 @@ You can try it locally with:
 npm run preview
 ```
 
+::alert{type="info"}
+You can find more examples in the Nitro repository: [unjs/nitro/examples](https://github.com/unjs/nitro/tree/main/examples)
+::
+
+## From Scratch
+
+If you want to start from scratch, to integrate Nitro in an existing repository, you can use the following guide.
+
+First, create a new directory and initialize a new Node.js project:
+
+```bash
+mkdir nitro-app
+cd nitro-app
+npm init -y
+```
+
+Install Nitro:
+
+::code-group
+
+```bash [npm]
+npm install nitropack
+```
+
+```bash [yarn]
+yarn add nitropack
+```
+
+```bash [pnpm]
+pnpm add nitropack
+```
+
+```bash [bun]
+bun add nitropack
+```
+
+::
+
+::alert{type="warning"}
+Nitro is named `nitropack` on npm.
+::
+
+Create a new file `tsconfig.json`:
+
+```json
+{
+  "extends": "./.nitro/types/tsconfig.json"
+}
+```
+
+Finally, create a new file `index.ts` in a `routes` directory:
+
+```ts
+export default defineEventHandler(() => {
+  return 'Hello World from scratch!'
+});
+```
+
+Start the development server:
+
+```bash
+npm run dev
+```
+
+Nitro is ready at `http://localhost:3000/`!
 
 ## Nightly Release Channel
 
