--- a/docs/content/1.guide/2.auto-imports.md
+++ b/docs/content/1.guide/2.auto-imports.md
@@ -6,7 +6,9 @@ icon: ri:magic-line
 
 Nitro is using [unjs/unimport](https://github.com/unjs/unimport) to auto import utilities when used with full tree-shaking support.
 
-## Available Auto Imports
+## Available Nitro Auto Imports
+
+Every Nitro utility is available as auto import:
 
 - `defineCachedFunction(fn, options)`{lang=ts} / `cachedFunction(fn, options)`{lang=ts}
 - `defineCachedEventHandler(handler, options)`{lang=ts} / `cachedEventHandler(handler, options)`{lang=ts}
@@ -27,7 +29,15 @@ With [TypeScript](/guide/typescript) enabled, you can easily see them as global 
 The types are auto generated for global auto-imports when running the `prepare` or `dev` command.
 ::
 
-## Manual Imports
+## Available h3 Auto Imports
+
+Every h3 utility is available as auto import. You can find the list on the [JSDocs](https://www.jsdocs.io/package/h3) page.
+
+::alert{type="info"}
+A [dedicated docs for h3](https://github.com/unjs/h3/pull/595) is coming soon.
+::
+
+# Manual Imports
 
 For some edge cases (IDE support and libraries in `node_modules`) it is impossible to rely on auto imports.
 
@@ -36,3 +46,5 @@ You can import them from virtual `#imports` file. It will be still tree-shaken:
 ```js [plugins/test.ts]
 import { useStorage } from '#imports'
 ```
+
+You cannot auto import to import directly from `nitropack`.
