docs: add object syntax for event handler

--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -221,3 +221,31 @@ export default defineEventHandler((event) => {
   }
 })
 ```
+
+## Object Syntax Event Handler
+
+Since H3@1.8, you can use a new object syntax to define event handler.
+
+::alert{type=primary}
+Read the announcement on the [UnJS blog](https://unjs.io/blog/2023-08-15-h3-towards-the-edge-of-the-web#object-syntax-event-handlers).
+::
+
+```ts [routes/hello.ts]
+const auth = defineRequestMiddleware((event) => {
+  event.context.auth = { name: 'admin' }
+})
+
+const compression = defineResponseMiddleware((event) => {
+  // Compress response
+})
+
+export default eventHandler({
+  onRequest: [auth],
+  onBeforeResponse: [compression],
+  async handler(event) {
+    return `Hello ${event.context.auth?.name || 'Guest'}`
+  },
+})
+```
+
+This synxtax allows you to order and define middleware before the handler and before the response.
