--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -154,7 +154,7 @@ When `cache` option is set, handlers matching pattern will be automatically wrap
 `swr: true|number` is shortcut for `cache: { swr: true, maxAge: number }`
 ::
 
-You can set route rules in `nitro.config.ts` or `nuxt.config.ts` using the `routeRules` option.
+You can set route rules in `nitro.config.ts` using the `routeRules` option.
 
 ::code-group
 ```ts [nitro.config.ts]
