docs: escape filename paths and prepend routes folder

--- a/docs/content/1.guide/5.cache.md
+++ b/docs/content/1.guide/5.cache.md
@@ -110,7 +110,7 @@ export const cachedGHStars = definedCachedFunction(async (repo: string) => {
   getKey: (repo: string) => repo
 })
 ```
-```ts [api/stars/[...repo].ts]
+```ts [api/stars/[...repo\\].ts]
 export default defineEventHandler(async (event) => {
   const repo = event.context.params.repo
   const stars = await cachedGHStars(repo).catch(() => 0)
