--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -53,7 +53,7 @@ You do not need to import `defineEventHandler` as it is automatically imported t
 
 To define a route with params, use the `[<param>]` syntax where `<param>` is the name of the param. The param will be available in the `event.context.params` object or using the `getRouteParam` utility from [unjs/h3](https://h3.unjs.io).
 
-```ts [/hello/[name].ts]
+```ts [/routes/hello/[name\\].ts]
 export default defineEventHandler(event => {
   const name = getRouteParam(event, 'name')
 
@@ -71,7 +71,7 @@ Hello nitro!
 
 You can define multiple params in a route using `[<param1>]/[<param2>]` syntax where each param is a folder. You **cannot** define multiple params in a single filename of folder.
 
-```ts [/hello/[name]/[age].ts]
+```ts [/routes/hello/[name\\]/[age\\].ts]
 export default defineEventHandler(event => {
   const name = getRouteParam(event, 'name')
   const age = getRouteParam(event, 'age')
@@ -84,7 +84,7 @@ export default defineEventHandler(event => {
 
 You can capture all the remaining parts of a URL using `[...<param>]` syntax. This will include the `/` in the param.
 
-```ts [/hello/[...name].ts]
+```ts [/routes/hello/[...name\\].ts]
 export default defineEventHandler(event => {
   const name = getRouteParam(event, 'name')
 
@@ -134,7 +134,7 @@ You can create a special route that will match all routes that are not matched b
 
 To create a catch all route, create a file named `[...].ts` in the `routes/` or `api/` directory or in any subdirectory.
 
-```ts [/routes/[...].ts]
+```ts [/routes/[...\\].ts]
 export default defineEventHandler(event => {
   const url = getRequestURL(event)
 
