docs(storage): fix unstorage links

--- a/docs/content/1.guide/4.storage.md
+++ b/docs/content/1.guide/4.storage.md
@@ -6,7 +6,7 @@ icon: ri:database-2-line
 
 Nitro provides a built-in storage layer that can abstract filesystem or database or any other data source.
 
-`useStorage()` is an instance of [createStorage](https://unstorage.unjs.io/usage) using the [memory driver](https://unstorage.unjs.io/drivers/memory).
+`useStorage()` is an instance of [createStorage](https://unstorage.unjs.io/getting-started/usage) using the [memory driver](https://unstorage.unjs.io/drivers/memory).
 
 **Example:** Simple (in memory) operations
 
@@ -19,7 +19,7 @@ await useStorage('test').setItem('foo', { hello: 'world' })
 await useStorage('test').getItem('foo')
 ```
 
-See [Unstorage](https://unstorage.unjs.io/usage) for detailed usage.
+See [Unstorage](https://unstorage.unjs.io/getting-started/usage) for detailed usage.
 
 ## Mountpoints
 
@@ -121,7 +121,7 @@ await useStorage().setItem('redis:foo', { hello: 'world' })
 await useStorage().getItem('redis:foo')
 ```
 
-Usage with [generics](https://unstorage.unjs.io/usage#type-inference):
+Usage with [generics](https://unstorage.unjs.io/getting-started/usage#generic-types):
 
 ```ts
 await useStorage().getItem<string>('foo')
