added documentation for defineRouteMeta

--- a/docs/content/1.guide/2.auto-imports.md
+++ b/docs/content/1.guide/2.auto-imports.md
@@ -11,6 +11,7 @@ Nitro is using [unjs/unimport](https://github.com/unjs/unimport) to auto import 
 - `defineCachedFunction(fn, options)`{lang=ts} / `cachedFunction(fn, options)`{lang=ts}
 - `defineCachedEventHandler(handler, options)`{lang=ts} / `cachedEventHandler(handler, options)`{lang=ts}
 - `defineRenderHandler(handler)`{lang=ts}
+- `defineRouteMeta(options)`{lang=ts}
 - `useRuntimeConfig(event?)`{lang=ts}
 - `useAppConfig(event?)`{lang=ts}
 - `useStorage(base?)`{lang=ts}
