--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -225,6 +225,36 @@ export default defineEventHandler((event) => {
 Returning anything from a middleware will close the request and should be avoided! Any returned value from middleware will be the response and further code will not be executed however **this is not recommended to do!**
 ::
 
+### Route Meta
+
+A function that takes in a ServerRouteMeta object and adds it to route meta during build time.
+
+At the moment it is only used to better define the experimental OpenAPI documentation for server routes, but can also be used to add useful params to your routes.
+
+```ts [/api/test.get.ts]
+defineRouteMeta({
+  openAPI: {
+      tags: ["Nitro Server Routes"],
+      summary: "Routes for Nitro",
+      description: "Some longer description for the specific route",
+      responses: [
+        200: {
+          description: "OK",
+        },
+        404: {
+          description: "Not found",
+        },
+      ],
+  },
+});
+```
+
+You do not need to import `defineRouteMeta` as it is automatically imported thanks to [auto-import feature](/auto-imports).
+
+::alert(type=info)
+You do not need to specify the method and the route in the openAPI specification since that will be extracted automatically from the route.
+::
+
 ### Execution Order
 
 Middleware are executed in directory listing order.
