--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -249,9 +249,9 @@ defineRouteMeta({
 });
 ```
 
-You do not need to import `defineRouteMeta` as it is automatically imported thanks to [auto-import feature](/auto-imports).
+You do not need to import `defineRouteMeta` as it is automatically imported thanks to (auto-import feature)[url(/auto-imports)].
 
-::alert(type=info)
+::alert{type=info}
 You do not need to specify the method and the route in the openAPI specification since that will be extracted automatically from the route.
 ::
 
