--- a/docs/content/3.config.md
+++ b/docs/content/3.config.md
@@ -62,7 +62,7 @@ Enable `/_nitro/swagger` and `/_nitro/openapi.json` endpoints.
 
 You can adjust/modify the output by inputting the options in `defineRouteMeta()` (auto imported) under openAPI.
 
-Follow the [openapi-typescript OperationObject type](https://github.com/drwpow/openapi-typescript/blob/main/packages/openapi-typescript/src/types.ts) or [swagger 3.0 specification](https://swagger.io/specification/v3/) to see the available options.
+Follow the (openapi-typescript OperationObject type)[url(https://github.com/drwpow/openapi-typescript/blob/main/packages/openapi-typescript/src/types.ts)] or (swagger 3.0 specification)[url(https://swagger.io/specification/v3/)] to see the available options.
 
 #### `wasm`
 
