--- a/docs/content/1.guide/6.fetch.md
+++ b/docs/content/1.guide/6.fetch.md
@@ -9,7 +9,7 @@ Nitro provides a built-in fetch API that can be used to get data from server end
 This is important to use it instead of the built-in Node `fetch` or Axios because it's optimized for serverless environments and agnostic to the runtime.
 
 ::alert{type="info"}
-We **do not overwrite** the built-in `fetch` function, so you can still use it if you want.
+You can keep using native `fetch()` if prefer.
 ::
 
 ## Usage
