docs: update using review

--- a/docs/content/1.guide/6.fetch.md
+++ b/docs/content/1.guide/6.fetch.md
@@ -18,7 +18,7 @@ In you handler, you've just to call the `$fetch` function to make a request. Aut
 
 ```ts [Router Handler]
 export default defineEventHandler(async (event) => {
-  const data = await $fetch('https://api.github.com/orgs/unjs/repos')
+  const data = await $fetch('https://ungh.cc/orgs/unjs/repos')
 
   return data
 })
@@ -30,7 +30,7 @@ You can pass a generic type to the `$fetch` function to get a better type infere
 import { Repo } from '~/types'
 
 export default defineEventHandler(async (event) => {
-  const data = await $fetch<Repo[]>('https://api.github.com/orgs/unjs/repos')
+  const data = await $fetch<Repo[]>('https://ungh.cc/orgs/unjs/repos')
 
   return data
 })
@@ -42,13 +42,13 @@ You can pass many options to the `$fetch` function like the method, headers, bod
 import { Repo } from '~/types'
 
 export default defineEventHandler(async (event) => {
-  const data = await $fetch<Repo[]>('https://api.github.com/orgs/unjs/repos', {
+  const data = await $fetch<Repo[]>(' https://api.github.com/markdown', {
     method: 'POST',
     headers: {
       'Content-Type': 'application/json'
     },
     body: {
-      name: 'my-repo'
+      text: 'Hello **world**!'
     }
   })
 
@@ -58,7 +58,7 @@ export default defineEventHandler(async (event) => {
 
 See more about the usage of the `$fetch` function in the [unjs/ofetch](https://ofetch.unjs.io) documentation.
 
-## Internal Fetch
+## In-Server Fetch
 
 You can also use the `$fetch` function to make internal requests to other handlers.
 
