--- a/docs/content/1.guide/0.getting-started.md
+++ b/docs/content/1.guide/0.getting-started.md
@@ -70,7 +70,6 @@ bun install
 
 ::
 
-
 Start the development server:
 
 ```bash
@@ -101,67 +100,31 @@ npm run preview
 You can find more examples in the Nitro repository: [unjs/nitro/examples](https://github.com/unjs/nitro/tree/main/examples)
 ::
 
-## From Scratch
+### Files
 
-If you want to start from scratch, to integrate Nitro in an existing repository, you can use the following guide.
+The starter template some important files to get you started.
 
-First, create a new directory and initialize a new Node.js project:
+`package.json`
 
-```bash
-mkdir nitro-app
-cd nitro-app
-npm init -y
-```
+The `package.json` file contains all the dependencies and scripts for your project.
 
-Install Nitro:
+`nitro.config.ts`
 
-::code-group
+The `nitro.config.ts` file contains the configuration for Nitro.
 
-```bash [npm]
-npm install nitropack
-```
+`tsconfig.json`
 
-```bash [yarn]
-yarn add nitropack
-```
+The `tsconfig.json` file contains the TypeScript configuration for your project. It extends an automatically generated `./.nitro/types/tsconfig.json` file that contains the configuration for Nitro.
 
-```bash [pnpm]
-pnpm add nitropack
-```
+You can use `npm run prepare` to generate some Nitro files in `.nitro` directory.
 
-```bash [bun]
-bun add nitropack
-```
-
+::alert{type="info"}
+Do not change this file directly, use `typescript` key in `nitro.config.ts` instead.
 ::
 
-::alert{type="warning"}
-Nitro is named `nitropack` on npm.
-::
+`routes/**/*.{ts,js}`
 
-Create a new file `tsconfig.json`:
-
-```json
-{
-  "extends": "./.nitro/types/tsconfig.json"
-}
-```
-
-Finally, create a new file `index.ts` in a `routes` directory:
-
-```ts
-export default defineEventHandler(() => {
-  return 'Hello World from scratch!'
-});
-```
-
-Start the development server:
-
-```bash
-npm run dev
-```
-
-Nitro is ready at `http://localhost:3000/`!
+The `routes` directory contains your application handlers. You can create subdirectories inside `routes` to create nested handlers. The file name is the route path.
 
 ## Nightly Release Channel
 
