docs: update env name

--- a/docs/content/1.guide/1.configuration.md
+++ b/docs/content/1.guide/1.configuration.md
@@ -46,7 +46,7 @@ First, you need to define the runtime config in your configuration file.
 ```ts [nitro.config.ts]
 export default defineNitroConfig({
   runtimeConfig: {
-    foo: "bar", // `bar` is the default value
+    apiToken: "dev_token", // `dev_token` is the default value
   }
 })
 ```
@@ -54,7 +54,7 @@ export default defineNitroConfig({
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   runtimeConfig: {
-    foo: "bar", // `bar` is the default value
+    apiToken: "dev_token", // `dev_token` is the default value
   }
 })
 ```
@@ -65,13 +65,13 @@ You can now access the runtime config using `useRuntimeConfig(event)`.  Use `use
 ::code-group
 ```ts [api/example.get.ts (nitro)]
 export default defineEventHandler((event) => {
-  return useRuntimeConfig(event).foo // Return `bar`
+  return useRuntimeConfig(event).apiToken // Return `dev_token`
 });
 ```
 
 ```ts [server/api/example.get.ts (nuxt)]
 export default defineEventHandler((event) => {
-  return useRuntimeConfig(event).foo // bar
+  return useRuntimeConfig(event).apiToken // dev_token
 });
 ```
 ::
@@ -85,10 +85,10 @@ Finally, you can update the runtime config using environment variables. You can 
 Create an `.env` file in your project root:
 
 ```bash [.env]
-foo="123"
+API_TOKEN="123"
 ```
 
-Re-start the development server, fetch the `/api/example` endpoint and you should see `123` as the response instead of `bar`.
+Re-start the development server, fetch the `/api/example` endpoint and you should see `123` as the response instead of `dev_token`.
 
 Do not froget taht you can still universally access environment variables using `import.meta.env` or `process.env` but avoid using them in ambiant global contexts to prevent unexpected behavior.
 
@@ -98,11 +98,11 @@ You can define variables in your production environment to update the runtime co
 
 ::code-group
 ```bash [.env (nitro)]
-NITRO_FOO="123"
+NITRO_API_TOKEN="123"
 ```
 
 ```bash [.env (nuxt)]
-NUXT_FOO="123"
+NUXT_API_TOKEN="123"
 ```
 ::
 
