docs: update using review

--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -181,6 +181,8 @@ export default defineEventHandler((event) => {
 })
 ```
 
+Middleware in `middleware/` directory are automatically registered for all routes. If you want to register a middleware for a specific route, see [Object Syntax Event Handler](#object-syntax-event-handler).
+
 ::alert
 Returning anything from a middleware will close the request and should be avoided! Any returned value from middleware will be the response and further code will not be executed however **this is not recommended to do!**
 ::
@@ -230,18 +232,26 @@ Since H3@1.8, you can use a new object syntax to define event handler.
 Read the announcement on the [UnJS blog](https://unjs.io/blog/2023-08-15-h3-towards-the-edge-of-the-web#object-syntax-event-handlers).
 ::
 
-```ts [routes/hello.ts]
-const auth = defineRequestMiddleware((event) => {
+You can start by defining middlewares in `utils/middleware` to be able to auto-import them in your routes:
+
+```ts [utils/middleware/auth.ts]
+export const auth = defineRequestMiddleware((event) => {
   event.context.auth = { name: 'admin' }
 })
+```
 
-const compression = defineResponseMiddleware((event) => {
-  // Compress response
+```ts [utils/middleware/log.ts]
+export const log = defineRequestMiddleware((event) => {
+  console.log(event)
 })
+```
 
+Then, you can use them in your routes:
+
+```ts [routes/hello.ts]
 export default eventHandler({
   onRequest: [auth],
-  onBeforeResponse: [compression],
+  onBeforeResponse: [log],
   async handler(event) {
     return `Hello ${event.context.auth?.name || 'Guest'}`
   },
