--- a/docs/content/1.guide/1.configuration.md
+++ b/docs/content/1.guide/1.configuration.md
@@ -4,7 +4,7 @@ icon: ri:settings-3-line
 
 # Configuration
 
-You can customize your Nitro server with single configuration file called `nitro.config.ts`. This file will be used by [deployement presets](/deploy) so you do not need to worry about them when configuring your server.
+You can customize your Nitro server with a single configuration file `nitro.config.ts`.
 
 If you are using [Nuxt](https://nuxt.com), use the `nitro` option in your Nuxt config.
 
