--- a/docs/content/1.guide/1.configuration.md
+++ b/docs/content/1.guide/1.configuration.md
@@ -65,7 +65,7 @@ You can now access the runtime config using `useRuntimeConfig(event)`.  Use `use
 ::code-group
 ```ts [api/example.get.ts (nitro)]
 export default defineEventHandler((event) => {
-  return useRuntimeConfig(event).apiToken // Return `dev_token`
+  return useRuntimeConfig(event).apiToken // Returns `dev_token`
 });
 ```
 
