--- a/docs/content/1.guide/3.routing.md
+++ b/docs/content/1.guide/3.routing.md
@@ -272,7 +272,7 @@ Since H3@1.8, you can use a new object syntax to define event handler.
 Read the announcement on the [UnJS blog](https://unjs.io/blog/2023-08-15-h3-towards-the-edge-of-the-web#object-syntax-event-handlers).
 ::
 
-You can start by defining middlewares in `utils/middleware` to be able to auto-import them in your routes:
+You can start by defining middleware in a file like `utils/auth.ts` to be able to auto-import them in your routes:
 
 ```ts [utils/middleware/auth.ts]
 export const auth = defineRequestMiddleware((event) => {
